kanc/src/tests/sample_code/should_succeed/multi_file/no_warnings/import_merging/src/nat.k
pub type Nat {
    .o: Nat,
    .s(n: Nat): Nat,
}
