kanc/src/tests/sample_code/should_fail/single_file/type_check/call_arg_labeledness_mismatch/unlabeled_variant_labeled_args.k
type Nat {
    .o: Nat,
    .s(n: Nat): Nat,
}

let o = Nat.o;

let right = Nat.s(o);
let wrong = Nat.s(pred: o);
